# VisionEvalEditorTool

./: .gitignore  README.md  UserGuide.md  app.py
.github/workflows/: build-mac-intel-installer.yml  build-windows-installer.yml  refresh-v102-windows.yml
Clean Explanations/DOCX/: 01_azone_carsvc_characteristics.docx  02_azone_charging_availability.docx  03_azone_electricity_carbon_intensity.docx  04_azone_fuel_power_cost.docx  05_azone_gq_pop_by_age.docx  06_azone_hh_ave_veh_per_driver.docx  07_azone_hh_lttrk_prop.docx  08_azone_hh_pop_by_age.docx  09_azone_hh_veh_mean_age.docx  10_marea_census_r.csv.docx  11_azone_hh_veh_own_taxes.docx  12_azone_hhsize_targets.docx  14_azone_payd_insurance_prop.docx  15_azone_per_cap_inc.docx  16_azone_prop_sov_dvmt_diverted.docx  17_azone_relative_employment.docx  18_azone_veh_use_taxes.docx  19_azone_vehicle_access_times.docx  20_bzone_carsvc_availability.docx  21_bzone_dwelling_units.docx  22_bzone_employment.docx  23_bzone_hh_inc_qrtl_prop.docx  24_bzone_lat_lon.docx  25_bzone_network_design.docx  26_bzone_parking.docx  27_bzone_transit_service.docx  28_bzone_travel_demand_management.docx  29_bzone_unprotected_area.docx  30_bzone_urban-mixed-use_prop.docx  32_marea_base_year_dvmt.docx  (+20 more)
Metadata/: metadata.json
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
packaging/: RELEASE.md  build-backend.sh  editor-backend.spec
public/: app.js  index.html  styles.css
(+142 files in other folders)
