[package]
name = "visioneval-editor"
version = "0.1.0"
description = "VisionEval Editor desktop app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
ureq = { version = "2", default-features = false }
